--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/about-me.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/about-me.html
@@ -120,18 +120,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="list-group">
-                        <a class="list-group-item" href="http://localhost/service/about/me#1">1.机构介绍</a>
-                        <a class="list-group-item" href="http://localhost/service/about/me#2">2.关于我们</a>
-                        <a class="list-group-item" href="http://localhost/service/about/me#3">3.服务条款</a>
-                        <a class="list-group-item" href="http://localhost/service/about/me#4">4.免责声明</a>
-                        <a class="list-group-item" href="http://localhost/service/about/me#5">5.网站地图</a>
-                        <a class="list-group-item" href="http://localhost/service/about/me#6">6.联系我们</a>
+                    <h3 class="text-info">About our website</h3>
+                    <div class="list-group" style="margin-top:10px">
+                        <a class="list-group-item" href="http://localhost/service/about/me#1"><b class="text-success">1.机构介绍</b></a>
+                        <a class="list-group-item" href="http://localhost/service/about/me#2"><b class="text-success">2.关于我们</b></a>
+                        <a class="list-group-item" href="http://localhost/service/about/me#3"><b class="text-success">3.服务条款</b></a>
+                        <a class="list-group-item" href="http://localhost/service/about/me#4"><b class="text-success">4.免责声明</b></a>
+                        <a class="list-group-item" href="http://localhost/service/about/me#5"><b class="text-success">5.网站地图</b></a>
+                        <a class="list-group-item" href="http://localhost/service/about/me#6"><b class="text-success">6.联系我们</b></a>
                     </div>
                 </div>
                 <div class="col-md-9">
                     <h3 id="1">机构简介</h3>
-                    <P><a href="http://localhost">众筹网</a>是中国专业的一站式综合众筹融资服务平台，是网信集团旗下的众筹模式网站，为大众提供筹资、投资、孵化、运营一站式综合众筹服务。
+                    <P><a href="http://localhost">众筹网</a>是中国专业的一站式综合众筹融资服务平台，是XXXX集团旗下的众筹模式网站，为大众提供筹资、投资、孵化、运营一站式综合众筹服务。
                     </P>
 
                     <h3 id="2">关于我们</h3>
