--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-center.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/templates/member-center.html
@@ -59,7 +59,68 @@
         $(function () {
             $("#applyBtn").click(function () {
                 window.location.href="http://localhost/identity/select"
-            })
+            });
+            //可重用--提交表单之前的验证confirm-order.html
+            var successCount = 0; //当下面四次都验证通过时，才会提交
+            //给提交收获地址提供校验 name="receiveName"
+            $("[name=loginacct]").change(function () {
+                $("#loginacctSpan").empty();
+                var value = $(this).val();
+                if (value == '' || value == null) {
+                    $("#loginacctSpan").empty().append("请填写用户账号！");
+                }else{
+                    successCount++;
+                }
+            });
+            $("[name=username]").change(function () {
+                $("#usernameSpan").empty();
+                var value = $(this).val();
+                if (value == '' || value == null) {
+                    $("#usernameSpan").empty().append("请填写用户昵称！");
+                }else{
+                    successCount++;
+                }
+            });
+            $("[name=email]").change(function () {
+                var value = $(this).val();
+                $("#emailSpan").empty();
+                if (value == '' || value == null) {
+                    $("#emailSpan").empty().append("请填写邮箱地址！");
+                }else{
+                    if(!/^([a-z0-9_\.-]+)@([\da-z\.-]+)\.([a-z\.]{2,6})$/.test(value)){
+                        $("#emailSpan").empty().append("邮箱格式有误！");
+                    }else{
+                        successCount++;
+                    }
+                }
+            });
+            $("[name=phonenum]").change(function () {
+                var value =$.trim($(this).val()) ;
+                $("#phonenumSpan").empty();
+                if (value == '' || value == null) {
+                    $("#phonenumSpan").empty().append("请填写手机号码！");
+                }else{
+                    if(!/^1[34578]\d{9}$/.test(value)){
+                        $("#phonenumSpan").empty().append("手机号码格式有误！");
+                    }else{
+                        successCount++;
+                    }
+                }
+            });
+            //saveAddressBtn绑定一个判断的函数，如果收货人、手机、地址都填写正确，就可以发送，否则返回false，阻止默认行为
+
+            $("#updateInfomationBtn").click(function () {
+                //首先将successCoount清空
+                successCount = 0;
+                $("[name=loginacct]").change();
+                $("[name=username]").change();
+                $("[name=email]").change();
+                $("[name=phonenum]").change();
+                if (successCount != 4) {
+                    layer.msg("请填写所有表单项，并保证格式正确！");
+                    return false;
+                }
+            });
         })
     </script>
 </head>
@@ -88,7 +149,7 @@
             </div>
             <div class="list-group">
                 <div class="list-group-item active">
-                    资产总览<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
+                    个人信息<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
                 </div>
                 <div class="list-group-item " style="cursor:pointer;">
                     <a th:href="@{/member/my/crowd}">我的众筹</a><span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
@@ -96,24 +157,94 @@
             </div>
         </div>
         <div class="col-sm-9 col-md-9 column">
-            <blockquote style="border-left: 5px solid #f60;color:#f60;padding: 0 0 0 20px;">
-                <b>
-                    我的钱包
-                </b>
-            </blockquote>
-            <div id="main" style="width: 600px;height:400px;"></div>
-            <blockquote style="border-left: 5px solid #f60;color:#f60;padding: 0 0 0 20px;">
-                <b>
-                    理财
-                </b>
-            </blockquote>
-            <div id="main1" style="width: 600px;height:400px;"></div>
-            <blockquote style="border-left: 5px solid #f60;color:#f60;padding: 0 0 0 20px;">
-                <b>
-                    比例
-                </b>
-            </blockquote>
-            <div id="main2" style="width: 600px;height:400px;"></div>
+            <div class="col-sm-9 col-md-9 column">
+                <div class="radio">
+                    <label>
+                        个人信息表
+                    </label>
+                </div>
+                <div style="border:10px solid #f60;border-bottom-color: #eceeef;border-width: 10px;width:20px;margin-left:20px;margin-top:-20px;
+                                             border-left-color: rgba(221, 221, 221, 0);
+                                             border-top-color: rgba(221, 221, 221, 0);
+                                             border-right-color: rgba(221, 221, 221, 0);">
+                </div>
+                <div class="panel panel-default" style="border-style: dashed;background-color:#eceeef">
+                    <div class="panel-body">
+                        <div class="col-md-12 column">
+                            <form action="auth/save/personal/information" method="post" class="form-horizontal">
+                                <input type="hidden" name="id" th:value="${session.loginMember.id}">
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">用户账号</label>
+                                    <div class="col-sm-10">
+                                        <input th:value="${session.loginMember.loginacct}" type="text" name="loginacct" class="form-control" style="width:200px;" placeholder="用户账号：用于登陆">
+                                        <span id="loginacctSpan" style="color:#DC143C"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">用户昵称</label>
+                                    <div class="col-sm-10">
+                                        <input th:value="${session.loginMember.username}"  class="form-control" name="username" type="text" style="width:200px;" placeholder="用户昵称：用于显示">
+                                        <span id="usernameSpan" style="color:#DC143C"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">邮箱</label>
+                                    <div class="col-sm-10">
+                                        <input  th:value="${session.loginMember.email}" class="form-control" name="email" type="text" style="width:400px;" placeholder="邮箱地址：xxx@163.com">
+                                        <span id="emailSpan" style="color:#DC143C"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">手机号码</label>
+                                    <div class="col-sm-10">
+                                        <input  th:value="${session.loginMember.phonenum}" class="form-control" name="phonenum" type="text" style="width:400px;" placeholder="请输入11位手机号码">
+                                        <span id="phonenumSpan" style="color:#DC143C"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">个人姓名</label>
+                                    <div class="col-sm-10">
+                                        <input  th:value="${session.loginMember.realname}" class="form-control" name="realname" type="text" style="width:400px;" placeholder="请输入真实姓名" disabled="disabled">
+                                        <span id="realnameBtn" style="color:#DC143C"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">身份证</label>
+                                    <div class="col-sm-10">
+                                        <input  th:value="${session.loginMember.cardnum}" class="form-control" name="cardnum" type="text" style="width:400px;" placeholder="请输入正确的身份证格式" disabled="disabled">
+                                        <span id="cardnumSpan" style="color:#DC143C"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">账号类型</label>
+                                    <div class="col-sm-10">
+                                        <input  th:if="${session.loginMember.usertype==0}" value="个体用户账号" class="form-control" name="usertype" type="text" style="width:400px;" placeholder="用户类型" disabled="disabled">
+                                        <input  th:if="${session.loginMember.usertype==1}" value="企业用户账号" class="form-control" name="usertype" type="text" style="width:400px;" placeholder="用户类型" disabled="disabled">
+                                        <span id="usertypeSpan" style="color:#DC143C"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">认证类型</label>
+                                    <div class="col-sm-10">
+                                        <input  th:if="${session.loginMember.accttype==0}" value="企业" class="form-control" name="usertype" type="text" style="width:400px;" placeholder="用户类型" disabled="disabled">
+                                        <input  th:if="${session.loginMember.accttype==1}" value="个体" class="form-control" name="usertype" type="text" style="width:400px;" placeholder="用户类型" disabled="disabled">
+                                        <input  th:if="${session.loginMember.accttype==1}" value="个人" class="form-control" name="usertype" type="text" style="width:400px;" placeholder="用户类型" disabled="disabled">
+                                        <input  th:if="${session.loginMember.accttype==1}" value="政府" class="form-control" name="usertype" type="text" style="width:400px;" placeholder="用户类型" disabled="disabled">
+                                        <span id="accttypeSpan" style="color:#DC143C"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="updateInfomationBtn" class="col-sm-2 control-label"></label>
+                                    <div class="col-sm-10">
+                                        <button id="updateInfomationBtn" type="submit" class="btn btn-primary">确认修改个人信息
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -123,191 +254,7 @@
     <div th:replace="include::footer" ></div>
 </div>
 
-<script>
-    $('#myTab a').click(function (e) {
-        e.preventDefault()
-        $(this).tab('show')
-    });
-    $('#myTab1 a').click(function (e) {
-        e.preventDefault()
-        $(this).tab('show')
-    });
 
-    var myChart = echarts.init(document.getElementById('main'));
-
-    // 指定图表的配置项和数据
-    option = {
-        title: {
-            text: '七日年化收益率(%)'
-        },
-        tooltip: {
-            trigger: 'axis'
-        },
-        legend: {
-            data: ['基金', '股票']
-        },
-        toolbox: {
-            show: false,
-            feature: {
-                dataZoom: {
-                    yAxisIndex: 'none'
-                },
-                dataView: {readOnly: false},
-                magicType: {type: ['line', 'bar']},
-                restore: {},
-                saveAsImage: {}
-            }
-        },
-        xAxis: {
-            type: 'category',
-            boundaryGap: false,
-            data: ['2017-05-16', '2017-05-17', '2017-05-18', '2017-05-19', '2017-05-20', '2017-05-21', '2017-05-22']
-        },
-        yAxis: {
-            type: 'value',
-            axisLabel: {
-                formatter: '{value} '
-            }
-        },
-        series: [
-            {
-                name: '基金',
-                type: 'line',
-                data: [1, 1, 5, 3, 2, 3, 2],
-                markPoint: {
-                    data: [
-                        {type: 'max', name: '最大值'},
-                        {type: 'min', name: '最小值'}
-                    ]
-                },
-                markLine: {
-                    data: [
-                        {type: 'average', name: '平均值'}
-                    ]
-                }
-            },
-            {
-                name: '股票',
-                type: 'line',
-                data: [1, -2, 2, 5, 3, 2, 4],
-                markPoint: {
-                    data: [
-                        {name: '周最低', value: -2, xAxis: 1, yAxis: -1.5}
-                    ]
-                },
-                markLine: {
-                    data: [
-                        {type: 'average', name: '平均值'},
-                        [{
-                            symbol: 'none',
-                            x: '90%',
-                            yAxis: 'max'
-                        }, {
-                            symbol: 'circle',
-                            label: {
-                                normal: {
-                                    position: 'start',
-                                    formatter: '最大值'
-                                }
-                            },
-                            type: 'max',
-                            name: '最高点'
-                        }]
-                    ]
-                }
-            }
-        ]
-    };
-    myChart.setOption(option);
-    var myChart1 = echarts.init(document.getElementById('main1'));
-
-    // 指定图表的配置项和数据
-    option1 = {
-        color: ['#3398DB'],
-        tooltip: {
-            trigger: 'axis',
-            axisPointer: {            // 坐标轴指示器，坐标轴触发有效
-                type: 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
-            }
-        },
-        grid: {
-            left: '3%',
-            right: '4%',
-            bottom: '3%',
-            containLabel: true
-        },
-        xAxis: [
-            {
-                type: 'category',
-                data: ['基金', '票据', '定期理财', '变现贷'],
-                axisTick: {
-                    alignWithLabel: true
-                }
-            }
-        ],
-        yAxis: [
-            {
-                type: 'value'
-            }
-        ],
-        series: [
-            {
-                name: '直接访问',
-                type: 'bar',
-                barWidth: '60%',
-                data: [10, 52, 200, 334, 390, 330, 220]
-            }
-        ]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
-    myChart1.setOption(option1);
-
-    var myChart2 = echarts.init(document.getElementById('main2'));
-
-    // 指定图表的配置项和数据
-    option2 = {
-        title: {
-            text: '某站点用户访问来源',
-            subtext: '纯属虚构',
-            x: 'center'
-        },
-        tooltip: {
-            trigger: 'item',
-            formatter: "{a} <br/>{b} : {c} ({d}%)"
-        },
-        legend: {
-            orient: 'vertical',
-            left: 'left',
-            data: ['直接访问', '邮件营销', '联盟广告', '视频广告', '搜索引擎']
-        },
-        series: [
-            {
-                name: '访问来源',
-                type: 'pie',
-                radius: '55%',
-                center: ['50%', '60%'],
-                data: [
-                    {value: 335, name: '直接访问'},
-                    {value: 310, name: '邮件营销'},
-                    {value: 234, name: '联盟广告'},
-                    {value: 135, name: '视频广告'},
-                    {value: 1548, name: '搜索引擎'}
-                ],
-                itemStyle: {
-                    emphasis: {
-                        shadowBlur: 10,
-                        shadowOffsetX: 0,
-                        shadowColor: 'rgba(0, 0, 0, 0.5)'
-                    }
-                }
-            }
-        ]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
-    myChart2.setOption(option2);
-</script>
 </body>
 </html>
 
