--- a/atcrowdfunding07-member-parent/atcrowdfunding14-member-order-consumer/src/main/resources/templates/confirm-order.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding14-member-order-consumer/src/main/resources/templates/confirm-order.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/theme.css">
     <script src="jquery/jquery-2.1.1.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="layer/layer.js"></script>
     <script src="script/docs.min.js"></script>
     <script src="script/back-to-top.js"></script>
     <style>
@@ -109,39 +110,57 @@
                     .append("<input type='hidden' name='orderRemark' value='" + remark + "' >")
                     .submit();
             });
+            var successCount = 0; //当下面三次都验证通过时，才会提交
+            //给提交收获地址提供校验 name="receiveName"
+            $("[name=receiveName]").change(function () {
+                var value = $(this).val();
+                alert(value);
+                if (value == '' || value == null) {
+                    $("#nameSpan").empty().append("请填写收货人！");
+                }else{
+                    successCount++;
+                }
+            });
+            $("[name=phoneNum]").change(function () {
+                var value = $(this).val();
+                if (value == '' || value == null) {
+                    $("#phoneNumSpan").empty().append("请填写手机号码！");
+                }else{
+                    if(!/^1(3[0-9]|bai5[189]|8[6789])[0-9]{8}$/.test(value)){
+                        $("#phoneNumSpan").empty().append("手机号码格式有误！");
+                    }else{
+                        successCount++;
+                    }
+                }
+            });
+            $("[name=address]").change(function () {
+                var value = $(this).val();
+                if (value == '' || value == null) {
+                    $("#addressSpan").empty().append("请填写收件人地址！");
+                }else{
+                    successCount++;
+                }
+            });
+            //saveAddressBtn绑定一个判断的函数，如果收货人、手机、地址都填写正确，就可以发送，否则返回false，阻止默认行为
+
+            $("#saveAddressBtn").click(function () {
+                //首先将successCoount清空
+                successCount = 0;
+                $("[name=receiveName]").change();
+                $("[name=phoneNum]").change();
+                $("[name=address]").change();
+                if (successCount != 3) {
+                    layer.msg("请填写所有表单项，并保证格式正确！");
+                    return false;
+                }
+            })
         });
 
     </script>
 </head>
 <body>
-<!--会员中心-->
-<div class="navbar-wrapper">
-    <div class="container">
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html" style="font-size:32px;">尚筹网-创意产品众筹平台</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse" style="float:right;">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                    class="glyphicon glyphicon-user"></i> [[${session.loginMember.username}]]<span
-                                    class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="member.html"><i class="glyphicon glyphicon-scale"></i> 会员中心</a></li>
-                                <li><a href="#"><i class="glyphicon glyphicon-comment"></i> 消息</a></li>
-                                <li class="divider"></li>
-                                <li><a href="http://localhost:80/auth/member/logout"><i
-                                        class="glyphicon glyphicon-off"></i> 退出系统</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-</div>
+<!-- 头部信息 -->
+<div th:replace="include::header"></div>
 
 <div class="container theme-showcase" role="main">
 
@@ -267,8 +286,8 @@
                                     <div style="border:10px solid #f60;border-bottom-color: #eceeef;border-width: 10px;width:20px;margin-left:20px;margin-top:-20px;
                                              border-left-color: rgba(221, 221, 221, 0);
                                              border-top-color: rgba(221, 221, 221, 0);
-                                             border-right-color: rgba(221, 221, 221, 0);
-                                    "></div>
+                                             border-right-color: rgba(221, 221, 221, 0);">
+                                    </div>
                                     <div class="panel panel-default"
                                          style="border-style: dashed;background-color:#eceeef">
                                         <div class="panel-body">
@@ -279,24 +298,22 @@
                                                     <div class="form-group">
                                                         <label class="col-sm-2 control-label">收货人（*）</label>
                                                         <div class="col-sm-10">
-                                                            <input type="text" name="receiveName" class="form-control"
-                                                                   style="width:200px;" placeholder="姓名：xxxx">
+                                                            <input type="text" name="receiveName" class="form-control" style="width:200px;" placeholder="姓名：xxxx">
+                                                            <span id="nameSpan" style="color:#DC143C"></span>
                                                         </div>
                                                     </div>
                                                     <div class="form-group">
                                                         <label class="col-sm-2 control-label">手机（*）</label>
                                                         <div class="col-sm-10">
-                                                            <input class="form-control" name="phoneNum" type="text"
-                                                                   style="width:200px;"
-                                                                   placeholder="请填写11位手机号码"></input>
+                                                            <input class="form-control" name="phoneNum" type="text" style="width:200px;" placeholder="请填写11位手机号码"/>
+                                                            <span id="phoneNumSpan" style="color:#DC143C"></span>
                                                         </div>
                                                     </div>
                                                     <div class="form-group">
                                                         <label class="col-sm-2 control-label">地址（*）</label>
                                                         <div class="col-sm-10">
-                                                            <input class="form-control" name="address" type="text"
-                                                                   style="width:400px;"
-                                                                   placeholder="请填写11位手机号码"></input>
+                                                            <input class="form-control" name="address" type="text" style="width:400px;" placeholder="请填写收货地址"/>
+                                                            <span id="addressSpan" style="color:#DC143C"></span>
                                                         </div>
                                                     </div>
                                                     <div class="form-group">
@@ -440,8 +457,7 @@
                                             </li>
                                             <li style="margin-top:10px;">
                                                 <button id="payBtn" disabled="disabled" type="button"
-                                                        class="btn btn-warning btn-lg"
-                                                        onclick="window.location.href='pay-step-3.html'">
+                                                        class="btn btn-warning btn-lg">
                                                     <i class="glyphicon glyphicon-credit-card"></i> 立即付款
                                                 </button>
                                             </li>
@@ -485,25 +501,7 @@
     </div>
 
     <!--关于我们-->
-    <div class="container" style="margin-top:20px;">
-        <div class="row clearfix">
-            <div class="col-md-12 column">
-                <div id="footer">
-                    <div class="footerNav">
-                        <a rel="nofollow" href="http://www.atguigu.com">关于我们</a> | <a rel="nofollow"
-                                                                                      href="http://www.atguigu.com">服务条款</a>
-                        | <a rel="nofollow" href="http://www.atguigu.com">免责声明</a> | <a rel="nofollow"
-                                                                                        href="http://www.atguigu.com">网站地图</a>
-                        | <a rel="nofollow" href="http://www.atguigu.com">联系我们</a>
-                    </div>
-                    <div class="copyRight">
-                        Copyright ?2010-2014atguigu.com 版权所有
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
+    <div th:replace="include::footer"></div>
 
 
     <!--为了收集当前页面的所有数据：使用一个隐藏表单-->
