--- a/atcrowdfunding07-member-parent/atcrowdfunding14-member-order-consumer/src/main/resources/templates/confirm-return.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding14-member-order-consumer/src/main/resources/templates/confirm-return.html
@@ -110,41 +110,15 @@
 
             $("#submitBtn").click(function () {
                 var returnCount = $("#returnCountInput").val();
-                alert(returnCount);
                 window.location.href = "order/confirm/order/"+returnCount;
             });
         });
     </script>
 </head>
 <body>
-<!-- 会员中心 -->
-<div class="navbar-wrapper">
-    <div class="container">
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html" style="font-size:32px;">尚筹网-创意产品众筹平台</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse" style="float:right;">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                    class="glyphicon glyphicon-user"></i> [[${session.loginMember.username}]]<span
-                                    class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="member.html"><i class="glyphicon glyphicon-scale"></i> 会员中心</a></li>
-                                <li><a href="#"><i class="glyphicon glyphicon-comment"></i> 消息</a></li>
-                                <li class="divider"></li>
-                                <li><a href="http://localhost:80/auth/member/logout"><i
-                                        class="glyphicon glyphicon-off"></i> 退出系统</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-</div>
+
+<!-- 头部信息 -->
+<div th:replace="include::header"></div>
 
 <div class="container theme-showcase" role="main">
 
@@ -293,25 +267,7 @@
     </div>
 
     <!--关于我们-->
-    <div class="container" style="margin-top:20px;">
-        <div class="row clearfix">
-            <div class="col-md-12 column">
-                <div id="footer">
-                    <div class="footerNav">
-                        <a rel="nofollow" href="http://www.atguigu.com">关于我们</a> | <a rel="nofollow"
-                                                                                      href="http://www.atguigu.com">服务条款</a>
-                        | <a rel="nofollow" href="http://www.atguigu.com">免责声明</a> | <a rel="nofollow"
-                                                                                        href="http://www.atguigu.com">网站地图</a>
-                        | <a rel="nofollow" href="http://www.atguigu.com">联系我们</a>
-                    </div>
-                    <div class="copyRight">
-                        Copyright ?2010-2014atguigu.com 版权所有
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
+    <div th:replace="include::footer"></div>
 
 
 
