--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-all.html
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/templates/project-all.html
@@ -239,12 +239,19 @@
                                 </p>
                                 <br>
                                 <div class="progress" style="margin-bottom: 4px;">
-                                    <div class="progress-bar progress-bar-success" role="progressbar"
+                                    <div th:if="${project.supportmoney!=0}" class="progress-bar progress-bar-success" role="progressbar"
                                          th:aria-valuenow="${project.money / project.supportmoney}" aria-valuenow="40"
                                          aria-valuemin="0" aria-valuemax="100"
                                          th:style="'width:'+${project.money / project.supportmoney}+'%'"
                                          style="width: 40%">
                                         <span th:text="${project.money / project.supportmoney}+'% '">40%</span>
+                                    </div>
+                                    <div th:if="${project.supportmoney==0}" class="progress-bar progress-bar-success" role="progressbar"
+                                         th:aria-valuenow="0" aria-valuenow="40"
+                                         aria-valuemin="0" aria-valuemax="100"
+                                         th:style="'width:0%'"
+                                         style="width: 40%">
+                                        <span th:text="'0% '">40%</span>
                                     </div>
                                 </div>
                                 <div>
